--- a/N-schoolmeal.css
+++ b/N-schoolmeal.css
@@ -46,7 +46,7 @@ body{
 .schoolmeal-main{
     margin: 37vh;
     margin-top: 10vh;
-    padding: 8vh;
+    padding: 60px;
     background-color: lightgray;
     border-radius: 10px 10px 10px 10px;
     
