--- a/mainPage/main.css
+++ b/mainPage/main.css
@@ -12,11 +12,10 @@ body{
 header .container{
     width: 100%;
     display: flex;
-    height: 70px;
+    height: 10vh;
     background-color: #fff;
     justify-content:space-between;
     align-items: center;
-    position: fixed;
 }
 
 .logout_btn{
