--- a/lecture/lecture.css
+++ b/lecture/lecture.css
@@ -1,8 +1,33 @@
+*{
+    text-decoration: none;
+}
 body{
     width: 100%;
     height: 100%;
+    background-color: #001845;
+    margin: 0;
 }
 
+.head{
+    width: 100%;
+    display: flex;
+    height: 10vh;
+    background-color: #fff;
+    justify-content:space-between;
+    align-items: center;
+    color: red;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.lecture{
+    height: 100vh;
+}
+.lecture h1{
+    color: #fff;
+}
 form{
     display: flex;
     flex-direction: column;
