--- a/mainPage/main.css
+++ b/mainPage/main.css
@@ -47,6 +47,7 @@ main .container{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     position: fixed;
 }
 
@@ -82,5 +83,4 @@ main .container{
     width: 300px;
     height: 300px;
 }
-
 
