--- a/lecture/lecture.css
+++ b/lecture/lecture.css
@@ -1,10 +1,11 @@
 *{
     text-decoration: none;
-    font-family: 'Noto Sans KR', sans-serif; 
+    font-family: 'Noto Sans KR', sans-serif;
+    text-decoration-line: none; 
 }
 body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #001845;
     margin: 0;
 }
@@ -86,4 +87,8 @@ textarea:focus{
     height: 70px;
     font-size:20px;
     margin-top: 25px;
+}
+
+#lectureListLink{
+    color: #fff;
 }
