--- a/schoolMeal/schoolmeal.css
+++ b/schoolMeal/schoolmeal.css
@@ -1,3 +1,7 @@
+* {
+    outline-color:#00205A ;
+}
+
 body{
     /* margin: 0%; */
     background-color: #00205A;
@@ -8,8 +12,6 @@ body{
     /* = main에서 margin400px 과 같다 */
 }
 
-
-
 .schoolmeal-main{
     /* margin: 37vh; */
 
@@ -17,7 +19,9 @@ body{
 
     /* margin:auto; */
     /* margin-top: 10vh; */
-    padding: 15vh;
+    padding: 10vh;
+
+
     background-color: lightgray;
     border-radius: 10px 10px 10px 10px;
     box-sizing: border-box;
@@ -175,4 +179,42 @@ body{
 
     color: white;
     opacity: 0.5;
+}
+
+
+
+.showselectedTable{
+    margin-top: 150px;
+    /* display:flex; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: none;
+}
+
+.showselectedTable{
+    color: #00205A;
+    font-size: 40px;
+    font-weight: bold;
+}
+.selectTable{
+    margin-left: 15vh;
+    width: 150px;
+    height: 70px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #00205A;
+    font-weight: bold;
+    box-shadow: 5px 5px;
+}
+
+.selectTable:active{
+    box-shadow: none;
+    position: relative;
+    left: 5px;
+    top:5px;
+}
+.selectTable:hover{
+    background-color: #e9e9e9;
 }
